[project]
name = "en-ru-corpus-utils"
version = "1.0.0"
description = "Utilities for preparing and cleaning English-Russian parallel corpora"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
