[project]
name = "en-ru-corpus-utils"
version = "1.0.0"
description = "Utilities for preparing and cleaning English-Russian parallel corpora"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "certifi==2025.7.14",
  "charset-normalizer==3.4.2",
  "colorama==0.4.6",
  "filelock==3.18.0",
  "fsspec==2025.7.0",
  "huggingface-hub==0.34.1",
  "idna==3.10",
  "Jinja2==3.1.6",
  "joblib==1.5.1",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mdurl==0.1.2",
  "model2vec==0.6.0",
  "mpmath==1.3.0",
  "networkx==3.4.2",
  "numpy==2.2.6",
  "packaging==25.0",
  "Pygments==2.19.2",
  "PyYAML==6.0.2",
  "removedup==1.0.6",
  "requests==2.32.4",
  "rich==14.1.0",
  "safetensors==0.5.3",
  "sympy==1.14.0",
  "tokenizers==0.21.2",
  "torch==2.7.1",
  "tqdm==4.67.1",
  "typing_extensions==4.14.1",
  "urllib3==2.5.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
