[project]
name = "en-ru-corpus-utils"
version = "1.0.1"
description = "Utilities for preparing and cleaning English-Russian parallel corpora"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "certifi>=2025.7,<2026",
    "charset-normalizer>=3.4,<4",
    "colorama>=0.4,<1",
    "filelock>=3.18,<4",
    "fsspec>=2025.7,<2026",
    "huggingface-hub>=0.34,<1",
    "idna>=3.10,<4",
    "Jinja2>=3.1,<4",
    "joblib>=1.5,<2",
    "markdown-it-py>=3.0,<4",
    "MarkupSafe>=3.0,<4",
    "mdurl>=0.1,<1",
    "model2vec>=0.6,<1",
    "mpmath>=1.3,<2",
    "networkx>=3.4,<4",
    "numpy>=2.2,<3",
    "packaging>=25,<26",
    "Pygments>=2.19,<3",
    "PyYAML>=6.0,<7",
    "removedup>=1.0,<2",
    "requests>=2.32,<3",
    "rich>=14.1,<15",
    "safetensors>=0.5,<1",
    "sympy>=1.14,<2",
    "tokenizers>=0.21,<0.22",
    "torch>=2.7,<3",
    "tqdm>=4.67,<5",
    "typing_extensions>=4.14,<5",
    "urllib3>=2.5,<3",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
